Removed useless functions & added watchStyleFiles() which will contain the main body for watching the styles dir.

--- a/example.config.yml
+++ b/example.config.yml
@@ -2,6 +2,6 @@ development:
   password: example-password
   theme_id: "123124323232"
   store: example.myshopify.com
-  directory: shop/src
+  directory: shop/dist
   ignore_files:
   - config/settings_data.json
