Added Webpack plugins to control minifying, linting and extracting css

--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
     "commander": "^7.2.0",
     "core-js": "^3.11.2",
     "cross-spawn": "^7.0.3",
+    "css-loader": "^5.2.4",
+    "css-minimizer-webpack-plugin": "^2.0.0",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-webpack-plugin": "^2.5.4",
+    "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
-    "postcss": "^8.2.13",
-    "postcss-cli": "^8.3.1",
-    "postcss-node-sass": "^3.1.0",
+    "install-peerdeps": "^3.0.3",
+    "mini-css-extract-plugin": "^1.6.0",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
-    "tailwindcss": "^2.1.2",
+    "stylelint-webpack-plugin": "^2.1.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0"
   }
