--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-    "extends": "airbnb-base/legacy"
+    "env": {
+        "browser": true,
+        "node": true,
+        "es6": true
+    },
+    "extends": "airbnb-base/legacy",
+    "parserOptions": {
+        "sourceType": "module",
+        "ecmaVersion": 6
+    }
 }
