--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "shopify-build-tool",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postcss": "postcss"
+  "preferGlobal": true,
+  "bin": {
+    "shopackify": "./bin/cli.js"
   },
-  "author": "",
+  "author": "Zacarie A. Carr",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.0",
     "@babel/preset-env": "^7.14.0",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.0.0",
     "chokidar": "^3.5.1",
@@ -26,7 +26,9 @@
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "install-peerdeps": "^3.0.3",
+    "js-yaml": "^4.1.0",
     "mini-css-extract-plugin": "^1.6.0",
+    "postcss-loader": "^5.2.0",
     "regenerator-runtime": "^0.13.7",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
@@ -34,7 +36,12 @@
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "terser-webpack-plugin": "5",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0"
-  }
+  },
+  "browserslist": [
+    "ie >=8",
+    "last 2 version"
+  ]
 }
