--- a/babel.config.json
+++ b/babel.config.json
@@ -3,7 +3,7 @@
         ["@babel/preset-env", {
             "useBuiltIns": "usage",
             "debug": true,
-            "corejs": { "version": "3.11", "proposals": true }
+            "corejs": { "version": "3.11" }
         }]
     ],
     "ignore": [ "node_modules" ]
