--- a/package.json
+++ b/package.json
@@ -38,10 +38,14 @@
     "stylelint-webpack-plugin": "^2.1.1",
     "terser-webpack-plugin": "5",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "ws": "^7.4.5"
   },
   "browserslist": [
     "ie >=8",
     "last 2 version"
-  ]
+  ],
+  "dependencies": {
+    "shopify-build-tool": "link:"
+  }
 }
