--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shopify-build-tool",
+  "name": "shopackify",
   "version": "1.0.0",
   "description": "",
   "preferGlobal": true,
@@ -8,44 +8,15 @@
   },
   "author": "Zacarie A. Carr",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.0",
-    "autoprefixer": "^10.2.5",
-    "babel-loader": "^8.2.2",
-    "bootstrap": "^5.0.0",
+  "dependencies": {
     "chokidar": "^3.5.1",
     "commander": "^7.2.0",
-    "core-js": "^3.11.2",
     "cross-spawn": "^7.0.3",
-    "css-loader": "^5.2.4",
-    "css-minimizer-webpack-plugin": "^2.0.0",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-webpack-plugin": "^2.5.4",
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
-    "install-peerdeps": "^3.0.3",
     "js-yaml": "^4.1.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "postcss-loader": "^5.2.0",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.32.12",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-webpack-plugin": "^2.1.1",
-    "terser-webpack-plugin": "5",
     "webpack": "^5.36.2",
-    "webpack-cli": "^4.6.0",
+    "webpack-cli": "^4.7.0",
     "ws": "^7.4.5"
-  },
-  "browserslist": [
-    "ie >=8",
-    "last 2 version"
-  ],
-  "dependencies": {
-    "shopify-build-tool": "link:"
   }
 }
