--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "shopackify",
+  "name": "@shopackify/shopackify",
   "version": "1.0.0",
-  "description": "",
+  "description": "A highly modular Theme development tool, to create world class & production ready Shopify themes, using Webpack and your choice of PostCSS or SASS, while transpiling & polyfilling ECMAScript to allow for backwards compatibility and newer code. ",
   "preferGlobal": true,
   "bin": {
-    "shopackify": "./bin/cli.js"
+    "shopackify": "bin/cli.js"
   },
   "author": "Zacarie A. Carr",
   "license": "ISC",
@@ -18,5 +18,33 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
     "ws": "^7.4.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/raylway/shopackify.git"
+  },
+  "keywords": [
+    "Shopify",
+    "Shopackify",
+    "Webpack",
+    "Babel",
+    "ES6",
+    "Transpile",
+    "Build",
+    "Tools",
+    "Modular",
+    "ESLint",
+    "Stylelint",
+    "Develop",
+    "Live",
+    "Reload",
+    "Shopify",
+    "Tooling",
+    "Themekit",
+    "slate"
+  ],
+  "bugs": {
+    "url": "https://github.com/raylway/shopackify/issues"
+  },
+  "homepage": "https://github.com/raylway/shopackify#readme"
 }
