--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopackify/shopackify",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A highly modular Theme development tool, to create world class & production ready Shopify themes, using Webpack and your choice of PostCSS or SASS, while transpiling & polyfilling ECMAScript to allow for backwards compatibility and newer code. ",
   "preferGlobal": true,
   "bin": {
@@ -15,6 +15,7 @@
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
+    "ora": "^5.4.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
     "ws": "^7.4.5"
