--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@shopackify/shopackify",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A highly modular Theme development tool, to create world class & production ready Shopify themes, using Webpack and your choice of PostCSS or SASS, while transpiling & polyfilling ECMAScript to allow for backwards compatibility and newer code. ",
-  "preferGlobal": true,
+  "preferGlobal": false,
   "bin": {
     "shopackify": "bin/cli.js"
   },
