--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fast-glob": "^3.2.5",
     "fs-extra": "^10.0.0",
     "js-yaml": "^4.1.0",
+    "lodash": "^4.17.21",
     "ora": "^5.4.0",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.7.0",
