--- a/bin/settings/recommended/package.json
+++ b/bin/settings/recommended/package.json
@@ -24,7 +24,8 @@
         "stylelint": "^13.13.1",
         "stylelint-config-standard": "^22.0.0",
         "stylelint-webpack-plugin": "^2.1.1",
-        "terser-webpack-plugin": "^5.1.2"
+        "terser-webpack-plugin": "^5.1.2",
+        "webpack-cli": "^4.7.2"
     },
     "author": "@Shopackify",
     "license": "ISC"
