--- a/bin/settings/recommended/package.json
+++ b/bin/settings/recommended/package.json
@@ -4,28 +4,29 @@
     "version": "1.0.0",
     "description": "A project initialized by @shopackify/shopackify",
     "devDependencies": {
-        "@babel/core": "^7.14.2",
-        "@babel/preset-env": "^7.14.2",
-        "autoprefixer": "^10.2.5",
-        "babel-loader": "^8.2.2",
-        "core-js": "^3.12.1",
-        "css-loader": "^5.2.4",
-        "css-minimizer-webpack-plugin": "^3.0.0",
-        "eslint": "^7.26.0",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-webpack-plugin": "^2.5.4",
-        "fast-glob": "^3.2.5",
-        "mini-css-extract-plugin": "^1.6.0",
-        "postcss-loader": "^5.3.0",
-        "regenerator-runtime": "^0.13.7",
-        "sass": "^1.32.13",
-        "sass-loader": "^11.1.1",
-        "style-loader": "^2.0.0",
-        "stylelint": "^13.13.1",
-        "stylelint-config-standard": "^22.0.0",
-        "stylelint-webpack-plugin": "^2.1.1",
-        "terser-webpack-plugin": "^5.1.2",
-        "webpack-cli": "^4.7.2"
+      "@babel/core": "^7.14.2",
+      "@babel/preset-env": "^7.14.2",
+      "autoprefixer": "^10.2.5",
+      "babel-loader": "^8.2.2",
+      "core-js": "^3.12.1",
+      "css-loader": "^5.2.4",
+      "css-minimizer-webpack-plugin": "^3.0.0",
+      "eslint": "^7.26.0",
+      "eslint-config-airbnb-base": "^14.2.1",
+      "eslint-webpack-plugin": "^2.5.4",
+      "fast-glob": "^3.2.5",
+      "mini-css-extract-plugin": "^1.6.0",
+      "postcss-loader": "^5.3.0",
+      "regenerator-runtime": "^0.13.7",
+      "sass": "^1.32.13",
+      "sass-loader": "^11.1.1",
+      "style-loader": "^2.0.0",
+      "stylelint": "^13.13.1",
+      "stylelint-config-standard": "^22.0.0",
+      "stylelint-webpack-plugin": "^2.1.1",
+      "terser-webpack-plugin": "^5.1.2",
+      "webpack-cli": "^4.7.2",
+      "webpack": "^5.44.0"
     },
     "author": "@Shopackify",
     "license": "ISC"
