--- a/bin/settings/standard/package.json
+++ b/bin/settings/standard/package.json
@@ -4,7 +4,9 @@
     "version": "1.0.0",
     "description": "A project initialized by @shopackify/shopackify",
     "devDependencies": {
-        "fast-glob": "^3.2.5"
+      "fast-glob": "^3.2.5",
+      "webpack": "^5.44.0",
+      "webpack-cli": "^4.7.2"
     },
     "author": "@Shopackify",
     "license": "ISC"
