--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Zacarie A. Carr",
   "license": "ISC",
   "dependencies": {
+    "@shopify/shopify-api": "^2.0.0",
     "chokidar": "^3.5.1",
     "commander": "^7.2.0",
     "cross-spawn": "^7.0.3",
