--- a/bin/settings/recommended/package.json
+++ b/bin/settings/recommended/package.json
@@ -1,8 +1,8 @@
 
 {
-    "name": "shopackify-project",
+    "name": "mango-project",
     "version": "1.0.0",
-    "description": "A project initialized by @shopackify/shopackify",
+    "description": "A project initialized by @shopackify/mango",
     "devDependencies": {
       "@babel/core": "^7.14.2",
       "@babel/preset-env": "^7.14.2",
