--- a/bin/settings/standard/package.json
+++ b/bin/settings/standard/package.json
@@ -1,8 +1,8 @@
 
 {
-    "name": "shopackify-project",
+    "name": "mango-project",
     "version": "1.0.0",
-    "description": "A project initialized by @shopackify/shopackify",
+    "description": "A project initialized by @shopackify/mango",
     "devDependencies": {
       "fast-glob": "^3.2.5",
       "webpack": "^5.44.0",
