--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@shopackify/shopackify",
+  "name": "@shopackify/mango",
   "version": "2.0.0",
   "description": "A highly modular Theme development tool, to create world class & production ready Shopify themes, using Webpack and your choice of PostCSS or SASS, while transpiling & polyfilling ECMAScript to allow for backwards compatibility and newer code. ",
   "preferGlobal": true,
   "bin": {
-    "shopackify": "bin/cli.js"
+    "mango": "bin/cli.js"
   },
   "author": "Zacarie A. Carr",
   "license": "ISC",
@@ -29,7 +29,7 @@
   },
   "keywords": [
     "Shopify",
-    "Shopackify",
+    "Mango",
     "Webpack",
     "Babel",
     "ES6",
