--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@shopify/shopify-api": "^2.0.0",
+    "bin-wrapper": "^4.1.0",
     "chokidar": "^3.5.1",
     "commander": "^7.2.0",
     "cross-spawn": "^7.0.3",
