--- a/bin/settings/package.json
+++ b/bin/settings/package.json
@@ -6,8 +6,8 @@
   "devDependencies": {
     "@babel/core": "^7.14.2",
     "@babel/preset-env": "^7.14.2",
+    "@babel/eslint-parser": "^7.16.3",
     "autoprefixer": "^10.2.5",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "core-js": "^3.12.1",
     "css-loader": "^5.2.4",
