--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ws": "^7.4.6"
   },
   "scripts": {
+    "build": "tsc --build",
     "postinstall": "mango install"
   },
   "repository": {
@@ -54,5 +55,11 @@
   "bugs": {
     "url": "https://github.com/raylway/shopackify/issues"
   },
-  "homepage": "https://github.com/raylway/shopackify#readme"
+  "homepage": "https://github.com/raylway/shopackify#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.22.0",
+    "@typescript-eslint/parser": "^5.22.0",
+    "eslint": "^8.15.0",
+    "typescript": "^4.6.4"
+  }
 }
