Updated tsconfig to point to es2015 from ES6.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "ES6",
+    "target": "es2015",
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
     "sourceMap": false,
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "lib": ["es2015"]
 }
